--- a/style.CSS
+++ b/style.CSS
@@ -70,6 +70,7 @@
     width: 100%;
     padding-top: 24px;
     margin-left: 24px;
+    
   }
 
   .purple {
@@ -80,7 +81,8 @@
   display: flex;
   flex-wrap: wrap;
   position: relative;
-  max-width: 350px;
+  width: 50%;
+
  }
  
  input,
@@ -98,6 +100,7 @@ button {
 
 .landing-input {
   width: 100%;
+  height: 45px;
 }
 
 .btn-input {
@@ -106,7 +109,7 @@ button {
 }
 
 .design-ill {
-  width: 60%;
+  width: 100%;
 }
 
 .logo_strip {
@@ -117,6 +120,38 @@ button {
 
 .container {
   display: flex;
+}
+
+.landing-row {
+  display: flex;
+}
+
+.landing_image {
+  width: 50%;
+}
+
+.landing_wrapper {
+  width: 50%;
+}
+
+.image_wrapper {
+  width: 50%;
+}
+
+span {
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+}
+
+h2 {
+  display: flex;
+  justify-content: center;
+}
+
+.fea_wrapper {
+  display: flex;
+  justify-content: center;
 }
 
 
