--- a/style.CSS
+++ b/style.CSS
@@ -10,6 +10,10 @@
   line-height: 1.5;
 }
 
+h1 {
+  font-size: 48px;
+}
+
 section {
   padding: 0 32px;
   display: block;
@@ -77,22 +81,11 @@ section {
     align-items: center;
   }
 
-  h1 {
-    width: 100%;
-    padding-top: 60px;
-    margin-left: 24px;
-  }
+ 
 
-  p {
-    width: 100%;
-    padding-top: 24px;
-    margin-left: 24px;
-    
-  }
-
-  .purple {
+.purple {
     color:rgb(124, 0, 233);
-  }
+}
 
  .email_wrapper {
   display: flex;
@@ -100,7 +93,16 @@ section {
   position: relative;
   width: 50%;
   margin-top: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 60px;
+}
+
+.landing-input {
+  padding: 30px;
+}
+
+.btn-input {
+  display: flex;
+  align-items: center;
 }
 
 #email {
@@ -111,14 +113,18 @@ section {
  input,
  button {
   padding: 12px;
-  border-radius: 25px;
+  border-radius: 35px;
   margin-top: 15px;
-  margin-left: 24px;
- }
+  }
 
 button {
   background-color: blueviolet;
   color: white; 
+  
+}
+
+.customers {
+  color: gray;
 }
 
 .landing-input {
@@ -138,7 +144,7 @@ button {
 .logo_strip {
   width: 80%;
   padding-top: 24px;
-  margin-left: 24px;
+  
 }
 
 .container {
@@ -169,9 +175,16 @@ span {
   
 }
 
-h2 {
+.para_2 {
   display: flex;
   justify-content: center;
+  font-size: 48px;
+  font-weight: 900;
+}
+
+.para_3 {
+  font-size: 48px;
+  font-weight: 900;
 }
 
 .fea_wrapper {
@@ -220,6 +233,33 @@ h2 {
   margin-top: 12px;
   color: gray;
   line-height: 1.8;
+}
+
+.qua_wrapper {
+  flex-direction: row;
+}
+
+.qua_title {
+  padding-top: 80px;
+  font-size: 16px;
+}
+
+.hero-1 {
+  width: 50%;
+}
+
+.qua_row {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+ 
+.qua_wrapper {
+  width: 45%;
+}
+
+.hero-1_wrapper {
+  width: 180%;
 }
 
 
