--- a/style.CSS
+++ b/style.CSS
@@ -325,16 +325,15 @@ span {
 
 .val_wrapper {
   display: flex;
+  
 }
 
 .v_para {
-  padding-top: 75px;
- 
+  padding: 75px;
 }
 
 .v_title {
   padding-top: 36px;
-  display: flex;
-  flex-direction: column;
+  
 }
 
