--- a/style.CSS
+++ b/style.CSS
@@ -7,6 +7,13 @@
     font-family: 'Fusi', sans-serif ;
 }
 
+.nav_link-btn:hover,
+.btn-input:hover,
+.btn_b:hover {
+  background: linear-gradient(rgb(242, 239, 244) 0%, rgb(186, 140, 247));
+  color: rgb(138, 43, 226);
+}
+
 p {
   font-size: 20px;
  }
@@ -18,6 +25,8 @@ p {
 }
 .para {
   line-height: 1.5;
+  
+  text-align: center;
   
 }
 
@@ -31,6 +40,7 @@ p {
 
 h1 {
   font-size: 48px;
+  font-weight: bolder;
 }
 
 section {
@@ -67,17 +77,20 @@ section {
   }
   .row {
     width: 100%;
-  
     max-width: 1200px;
     margin: 0 auto;
   }
   .nav_link-btn {
-    padding: 8px 16px;
-    background-color: rgb(124, 0, 233);
+    margin: 0;
+    padding: 10px 32px;
+    margin-top: 2px;
     border-radius: 9999px;
-    color:aliceblue
+    background: linear-gradient(rgb(152, 65, 229) 0%, rgb(229, 200, 252));
+    color:aliceblue;
+    line-height: 1.5;
+    transition: all 300ms;
   }
-  
+
   .now_container {
     display: flex;
     justify-content: space-between;
@@ -117,7 +130,18 @@ section {
 }
 
 .landing-input {
-  padding: 30px;
+  width: 100%;
+  border-radius: 500px;
+  border: 2px solid rgb(179, 179, 179);
+  padding: 40px 192px 20px 170px;
+  color: rgb(36, 62, 99);
+  font-size: 16px;
+  font-weight: 500;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  z-index: 1;
+  transition: border-color 300ms;
 }
 
 .btn-input {
@@ -132,15 +156,15 @@ section {
  
  input,
  button {
-  padding: 12px;
+  padding: 12px 80px;
   border-radius: 35px;
   margin-top: 15px;
   }
 
 button {
-  background-color: blueviolet;
-  color: white; 
-  width: 150px;
+ 
+  cursor: pointer;
+  font-weight: bolder;
   
 }
 
@@ -148,15 +172,31 @@ button {
   color: gray;
 }
 
-.landing-input {
-  width: 100%;
-  height: 45px;
-}
+
 
 .btn-input {
-  position: absolute;
-  right: 0;
+  z-index: 2;
+  display: flex;
+  justify-content: center;
+  margin: 4px;
+  height: calc(100% - 16px);
+  border-radius: 500px;
+  border: solid 2px blueviolet;
+  width: 160px;
+  background: linear-gradient(rgb(152, 65, 229) 0%, rgb(229, 200, 252));
+  color: white;
+  font-weight: 700;
+  font-size: 14px;
+  transition: all 300ms;
 }
+
+.btn_b {
+  background: linear-gradient(rgb(152, 65, 229) 0%, rgb(248, 248, 248));
+  color: white;
+  transition: all 300ms;
+}
+
+
 
 .design-ill {
   width: 100%;
@@ -377,8 +417,185 @@ span {
 
 .p_para {
   width: 40%;
+  max-width: 500px;
+  text-align: center;
+}
+
+.p_container {
+  width: 96px 0;
+}
+
+
+
+
+.row {
+  width: 100%;
+  max-width: 1280px; 
+  margin: 0 auto;
+}
+
+.plans {
   display: flex;
+  justify-content: space-between;
+  width: 100%;
+  position: relative;
+  z-index: 100;
+}
+
+.plan {
+  padding: 25px;
+  margin: 0 24px;
+}
+
+.plan_head--p {
+  background: linear-gradient(rgb(11, 167, 223) 0%, rgb(252, 254, 255));
+  margin:  48px -30px;
+  border-radius: 10px;
+  padding-bottom: 24px;
+  padding: 48px;
+}
+
+.plan_head--b {
+  background: linear-gradient(rgb(65, 117, 229) 0%, rgb(255, 255, 255));
+  margin:  48px -30px;
+  border-radius: 10px;
+  padding-bottom: 24px;
+  padding: 48px;
+}
+
+.plan_head--e {
+  background: linear-gradient(rgb(152, 65, 229) 0%, rgb(248, 248, 248));
+  margin:  48px -30px;
+  border-radius: 10px;
+  padding-bottom: 24px;
+  padding: 48px;
+}
+
+.land_plan {
+  border-radius: 10px;
+  padding-bottom: 24px;
+  padding: 50px;
+}
+
+.btn_plan--p,
+.btn_plan--b,
+.btn_plan--e {
+  padding-top: 36px;
+  border-radius: 10px;
   
 }
+
+.btn_p {
+  background: cyan;
+  margin-left: 30px;
+}
+
+.btn_bus {
+  background: blue;
+  color: white;
+  margin-left: 30px;
+}
+
+.btn_e {
+  background: blueviolet;
+  margin-left: 30px;
+}
+
+.plan_p {
+  display: flex;
+  justify-content: center;
+  margin: 40px;
+  font-size: 36px;
+  
+}
+
+.plan_pri {
+  font-size: 36px;
+  display: flex;
+  justify-content: center;
+}
+
+.plan_mon {
+  display: flex;
+  justify-content: center;
+  font-size: 18px;
+  color: #4a4b4c;
+  font-weight: bold;
+}
+
+.plan_type {
+  display: flex;
+  justify-content: center;
+  font-size: 36px;
+  padding: 24px;
+}
+
+.plan_f {
+  display: flex;
+  justify-content: center;
+  font-size: 18px;
+  color: #414141;
+  font-weight: bold;
+}
+
+.t_row {
+  display: flex;
+  margin: 0 24px;
+}
+
+.testi_img {
+width: 42%;
+}
+
+.testi_discription {
+  display: flex;
+  flex-direction: column;
+  padding-left: 65px;
+}
+
+.testi_rating  {
+  color: blueviolet;
+  margin-right: 2px;
+  margin-top: 4px;
+}
+
+.testi_title {
+  padding: 24px;
+}
+
+.testi_para {
+  margin: 16px 0 40px 0;
+  color: gray;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 1.5;
+}
+
+.testi_profile {
+  display: flex;
+}
+
+.testi_name,
+.testi_role {
+  padding-left: 24px;
+}
+
+.tes_img {
+  height: 64px;
+  width: 64px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
