--- a/style.CSS
+++ b/style.CSS
@@ -701,18 +701,18 @@ footer {
 }
 
 .footer_columns {
-  /* justify-content: center; */
  margin-top: -48px;
- flex-direction: column;
+ justify-content: space-between;
  display: flex;
  flex-wrap: wrap;
 }
 
 .footer_column {
-  width: auto;
-  /* padding: 0 16px; */
-  /* text-align: center; */
-  /* align-items: center; */
+  margin-top: 48px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  z-index: 2;
 }
 
 .footer_column--title {
@@ -724,10 +724,53 @@ footer {
 .footer_column--link {
   color: whitesmoke;
   padding-top: 24px;
-  line-height: 1.5;
-  
-  
+  line-height: .7;
+  cursor: pointer;
 }
+
+.footer_div {
+  width: 100%;
+  height: 2px;
+  margin: 64px 0;
+  background-color: rgb(100, 42, 225);
+}
+
+@media (max-width: 768px) {
+.footer_btm {
+  flex-direction: column;
+  align-items: center;
+ }
+}
+
+.footer_logo {
+  display: flex;
+  align-items: center;
+  height: 32px;
+  width: 32px;
+}
+
+.footer_logo-text {
+  font-size: 20px;
+  color: whitesmoke;
+  font-weight: 700;
+  margin-left: 8px;
+  letter-spacing: 0.05em;
+}
+
+@media (max-width: 640px) {
+  .footer_copyright {
+    font-size: 14px;
+    text-align: center;
+    line-height: 1.5;
+  }
+}
+
+@media (max-width: 768px) {
+  .footer_copyright {
+    margin-top: 32px;
+  }
+}
+
 
 
 
