--- a/style.CSS
+++ b/style.CSS
@@ -712,7 +712,7 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  z-index: 2;
+  z-index: 2
 }
 
 .footer_column--title {
@@ -731,15 +731,8 @@ footer {
 .footer_div {
   width: 100%;
   height: 2px;
-  margin: 64px 0;
-  background-color: rgb(100, 42, 225);
-}
-
-@media (max-width: 768px) {
-.footer_btm {
-  flex-direction: column;
-  align-items: center;
- }
+  margin: 44px 0;
+  background: rgb(100, 42, 225);
 }
 
 .footer_logo {
@@ -757,18 +750,18 @@ footer {
   letter-spacing: 0.05em;
 }
 
-@media (max-width: 640px) {
+
   .footer_copyright {
     font-size: 14px;
     text-align: center;
     line-height: 1.5;
-  }
+    color: whitesmoke;
 }
 
-@media (max-width: 768px) {
-  .footer_copyright {
-    margin-top: 32px;
-  }
+.footer_btm {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 
