--- a/style.CSS
+++ b/style.CSS
@@ -7,6 +7,10 @@
     font-family: 'Fusi', sans-serif ;
 }
 
+.nav_link:hover {
+  text-decoration: underline;
+}
+
 .nav_link-btn:hover,
 .btn-input:hover,
 .btn_b:hover {
@@ -62,12 +66,18 @@ section {
   nav {
     margin-top: 20px;
   }
+
+  .nav_link {
+    border-bottom: 2px solid transparent;
+  }
   
   .nav_link--list {
     list-style-type: none;
     margin: 0 12px;
-    gap: 18px;
+    gap: 40px;
     font-size: 16px;
+    position: relative;
+    transition: all 300ms;
   }
   
   .logo-title {
@@ -575,7 +585,7 @@ width: 50%;
 
 .testi_rating  {
   padding-top: 24px;
-  color: yellowgreen;
+  color: yellow;
   margin-right: 2px;
   margin-top: 4px;
 }
@@ -725,7 +735,17 @@ footer {
   color: whitesmoke;
   padding-top: 24px;
   line-height: .7;
+  position: relative;
   cursor: pointer;
+  }
+
+  .footer_column--link:hover {
+    text-decoration: underline;
+    }
+
+a {
+  display: inline;
+  text-decoration: none;
 }
 
 .footer_div {
@@ -746,7 +766,7 @@ footer {
   font-size: 20px;
   color: whitesmoke;
   font-weight: 700;
-  margin-left: 8px;
+  margin-left: -380px;
   letter-spacing: 0.05em;
 }
 
@@ -762,6 +782,13 @@ footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.footer_social-link {
+  width: 70px;
+  color: rgb(35, 5, 117);
+  font-size: 36px;
+  cursor: pointer;
 }
 
 
