Emphasise the name

--- a/style.CSS
+++ b/style.CSS
@@ -791,6 +791,64 @@ a {
   cursor: pointer;
 }
 
+.btn_menu {
+  background-color: transparent;
+  font-size: 40px;
+  text-align: center;
+  border: none;
+  color: #7342d6;
+  display: none;
+  
+}
+
+.menu_backdrop {
+  position: absolute;
+  background-color: white;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 100;
+
+  justify-content: center;
+  align-items: center;
+  transition: all 300ms ease;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.menu--open .menu_backdrop {
+  visibility: visible;
+  opacity: 1;
+}
+
+.menu--open {
+  max-height: 100vh;
+  overflow-y: hidden;
+}
+
+.menu_links {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.menu_list {
+  padding: 12px 0;
+}
+
+.menu_link {
+  font-size: 40px;
+  color: black;
+}
+
+.btn_menu--close {
+  position: absolute;
+  right: 20px;
+  top: 10px;
+  padding: 8px;
+  color: black;
+}
+
 
 
 
